@@ -108,12 +108,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
        Trunk version of patch works
      +1: rpluem, jorton, covener
 
-   * mod_userdir: support merge of "userdir disabled" or "userdir public_html"
-     when userdir directives appear in vhost context. PR 44076
-     Trunk patch: http://svn.apache.org/viewvc?rev=1042090&view=rev
-     2.2.x patch:  http://people.apache.org/~covener/patches/2.2.x-userdir_merge.diff 
-     +1 covener, rpluem, poirier
-
   * mod_dav: If an unknown Content-* header is received for a PUT request, we
     must not ignore it but reply with 501 per RFC 2616 9.6.
     PR: 42978
